--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
               <h3 class="resume-title">Other Work Experience</h3>
               <div class="resume-item">
                 <h4>Customer Service Associate</h4>
-                <h5>JDecember 15, 2022 – Present</h5>
+                <h5>December 15, 2022 – Present</h5>
                 <p><em>La Maison Simons, Mississauga, ON, Canada</em></p>
             
               </div>
