--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-6 text-center">
           <h2>Welcome!<br>I'm Charles Lois Reyes<br>
-            <p>Multimedia Specialist</p>
+            <p>Multimedia Specialist | Graphic Designer | Web Designer</p>
       </div>
   </section>
 
