--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <h2>Something About Me</h2>
         <br>
        <p>Dedicated, hard working and reliable Multimedia Specialist with
-        over 10 years of experience in broadcasting industry. Experience
+         10 years of experience in broadcasting industry. Experience
         in video editing, handling YouTube channel & social media
         platforms, graphic design and web design are some of my
         expertise. Detailed and precise action to deliver high quality of
@@ -144,7 +144,7 @@
 
               <h4>Web Design &amp; Development Management</h4>
               <h5>2022 - 2023</h5>
-              <h5>Certificate of Achievement</h5>
+              <h5>Certificate of Achievement with Honours</h5>
               <p><em>Humber College Institute of Technology & Advance Learning - Toronto, ON, Canada</em></p>
 
               <div>
@@ -189,7 +189,7 @@
               </div>
               <div class="resume-item">
                 <h4>Mover</h4>
-                <h5>December 20, 2022 – Present</h5>
+                <h5>December 20, 2022 – June 12, 2023</h5>
                 <p><em>Office Move Pro, Mississauga, ON, Canada</em></p>
               </div>
 
@@ -209,7 +209,7 @@
         </div>
     </section>
 
-    <center><a href="https://drive.google.com/file/d/1J2klFSDWTKsZb2nJYzDrCf4uEoDaRiF8/view?usp=share_link">Click here to view my Curriculum Vitae</a></center>
+    <center><a href="https://drive.google.com/file/d/14cdKOKwO_zgLGE2EyHxDHw51lJD5O3Pp/view?usp=sharing">Click here to view my Curriculum Vitae</a></center>
 
     <div id="preloader">
       <div class="line"></div>
