--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
 
-              <h4>Web Design &amp; Development Management</h4>
+              <h4>Web Design &amp; Development</h4>
               <h5>2022 - 2023</h5>
               <h5>Certificate of Achievement with Honours</h5>
               <p><em>Humber College Institute of Technology & Advance Learning - Toronto, ON, Canada</em></p>
