--- a/about.html
+++ b/about.html
@@ -148,7 +148,7 @@
               <p><em>Humber College Institute of Technology & Advance Learning - Toronto, ON, Canada</em></p>
 
               <div>
-                <h4>Bachelor of Science in Information Technology (BSIT)</h4>
+                <h4>Bachelor of Science in Information Technology</h4>
                 <h5>2007 - 2010</h5>
                 <h5>Diploma</h5>
                 <p><em>AMA University & Colleges - Pasig City, Philippines</em></p>
